test/files/run/splain-truncrefined.check
newSource1.scala:11: error: type mismatch;
  Object with D {...}|C {...}
  f(new D { type X = C; type Y = D })
    ^
